@@ -1,6 +1,6 @@
 <!DOCTYPE html><html><head>
 <meta charset="UTF-8">
-<title>Icmake V 9.00.00</title>
+<title>Icmake V 9.01.00</title>
 <style type="text/css">
     .centered {margin:0px auto;display:block;}
     body {color: #27408B; background: #FFFAF0;}
@@ -11,7 +11,7 @@
 </head>
 <body>
 <hr/>
-<h1 id="title">Icmake V 9.00.00</h1>
+<h1 id="title">Icmake V 9.01.00</h1>
 <h2 id="author">Frank B. Brokken (f.b.brokken@rug.nl)<br/></h2>
 
 <h2 id="affiliation">Center for Information Technology, University of Groningen</h2><h2 id="date">1992-2016</h2>
@@ -33,6 +33,8 @@ by its tag or download the matching <code >.zip</code> or <code >.tar.gz</code> 
 release page):
 <p>
 <ul>
+        <li> <a href="https://github.com/fbb-git/icmake/releases/tag/9.01.00">9.01.00</a>
+Sep 03, 2016;
         <li> <a href="https://github.com/fbb-git/icmake/releases/tag/9.00.00">9.00.00</a>
 Jul 23, 2016;
         <li> <a href="https://github.com/fbb-git/icmake/releases/tag/8.01.00">8.01.00</a>
@@ -40,9 +42,7 @@ Feb 13, 2016;
         <li> <a href="https://github.com/fbb-git/icmake/releases/tag/8.00.05">8.00.05</a>
 Dec 21, 2015;
         <li> <a href="https://github.com/fbb-git/icmake/releases/tag/8.00.04">8.00.04</a>
-Dec 13, 2015;
-        <li> <a href="https://github.com/fbb-git/icmake/releases/tag/8.00.00">8.00.00</a>
-Dec 06, 2015;
+Dec 13, 2015.
         </ul>
     
 <p>
