@@ -10,7 +10,7 @@
 <body text="#27408B" bgcolor="#FFFAF0">
 <hr/>
 <h1 id="title">icmconf</h1>
-<h2 id="author">icmake.9.00.00.tar.gz</h2>
+<h2 id="author">icmake.9.01.00.tar.gz</h2>
 <h2 id="date">1992-2016</h2>
 
 <!DOCTYPE html><html><head>
@@ -43,7 +43,7 @@
 <body text="#27408B" bgcolor="#FFFAF0">
 <hr/>
 <h1 id="title">icmconf(7)</h1>
-<h2 id="author">icmake.9.00.00.tar.gz configuration file for <strong >icmbuild</strong>(1)</h2>
+<h2 id="author">icmake.9.01.00.tar.gz configuration file for <strong >icmbuild</strong>(1)</h2>
 <h2 id="date">1992-2016</h2>
 
 
@@ -119,6 +119,11 @@ when calling <em >icmake -d</em> (or directly: <em >/usr/lib/icmake/icm-dep</em>
         located in non-standard library locations (e.g., not in <em >/lib</em> and
         <em >/usr/lib</em>) then these additional paths are (blank space separated)
         specified here. Specify only the paths, not the <em >-L</em> flags.
+<p>
+It is stronly advised to specify full pathnames here, or remember that
+        normally the location of the <em >icmconf</em> file is not the location
+        where the compilation actually takes place, which is the location
+        specified at the <em >TMP_DIR</em> parameter (see below).
 <p>
 <li><strong >#define CLS</strong><br/>
        The <em >clear screen</em> directive. If defined <em >tput clear</em> is called to
