@@ -10,7 +10,7 @@
 <body text="#27408B" bgcolor="#FFFAF0">
 <hr/>
 <h1 id="title">icmstart</h1>
-<h2 id="author">icmake.9.00.00.tar.gz</h2>
+<h2 id="author">icmake.9.01.00.tar.gz</h2>
 <h2 id="date">1992-2016</h2>
 
 <!DOCTYPE html><html><head>
@@ -43,7 +43,7 @@
 <body text="#27408B" bgcolor="#FFFAF0">
 <hr/>
 <h1 id="title">icmstart(1)</h1>
-<h2 id="author">icmake.9.00.00.tar.gz starts icmbuild program maintenance</h2>
+<h2 id="author">icmake.9.01.00.tar.gz starts icmbuild program maintenance</h2>
 <h2 id="date">1992-2016</h2>
 
 
